--- a/Laatikkopeli/src/main/resources/laatikkopeli/frontpage.fxml
+++ b/Laatikkopeli/src/main/resources/laatikkopeli/frontpage.fxml
@@ -3,8 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -17,27 +19,42 @@
          </font></Label>
       <AnchorPane fx:id="topButtons" minWidth="800.0" prefHeight="120.0" prefWidth="800.0">
          <children>
-            <VBox fx:id="showPlayer1" layoutX="14.0" maxHeight="80.0" prefHeight="47.0" prefWidth="220.0">
+            <StackPane prefHeight="80.0" prefWidth="220.0">
                <children>
-                  <Label text="Pelaaja1:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="player1Name" prefHeight="27.0" prefWidth="151.0">
-                     <font>
-                        <Font name="Bodoni MT" size="22.0" />
-                     </font>
-                  </Label>
-                  <StackPane fx:id="p1Buttons" alignment="TOP_LEFT" prefHeight="150.0" prefWidth="200.0">
+                  <HBox fx:id="showPlayer1" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                      <children>
-                        <Button fx:id="loginP1" alignment="CENTER" minHeight="23.0" mnemonicParsing="false" onAction="#openLoginView" prefHeight="23.0" prefWidth="85.0" text="Kirjaudu" />
-                        <Button fx:id="logoutP1" alignment="CENTER" layoutX="10.0" layoutY="10.0" minHeight="23.0" mnemonicParsing="false" onAction="#logoutP1" prefHeight="23.0" prefWidth="85.0" text="Kirjaudu ulos" />
+                        <VBox alignment="CENTER_RIGHT" maxHeight="80.0" maxWidth="150.0" prefHeight="80.0" prefWidth="220.0" spacing="10.0">
+                           <children>
+                              <Label fx:id="player1Name" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="27.0" prefWidth="151.0" text="*player1*" textAlignment="RIGHT">
+                                 <font>
+                                    <Font name="Bodoni MT" size="22.0" />
+                                 </font>
+                              </Label>
+                              <Button fx:id="logoutP1" alignment="CENTER" mnemonicParsing="false" onAction="#logoutP1" text="Kirjaudu ulos">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                        </VBox>
+                        <Pane prefHeight="80.0" prefWidth="80.0">
+                           <children>
+                              <ImageView fx:id="player1Avatar" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
                      </children>
-                  </StackPane>
+                  </HBox>
+                  <Button fx:id="loginP1" alignment="CENTER" mnemonicParsing="false" onAction="#openLoginView" text="Kirjaudu">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
                </children>
-            </VBox>
-            <HBox fx:id="centerButtons" alignment="TOP_CENTER" layoutX="225.0" prefHeight="80.0" prefWidth="340.0" spacing="20.0">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </StackPane>
+            <HBox fx:id="centerButtons" alignment="TOP_CENTER" layoutX="250.0" prefHeight="80.0" prefWidth="300.0" spacing="15.0">
                <children>
                   <Button fx:id="play1Button" disable="true" minHeight="50.0" mnemonicParsing="false" onAction="#openSinglePlayerView" text="YKSINPELI" />
                   <Button fx:id="signUpButton" layoutX="10.0" layoutY="10.0" minHeight="50.0" onAction="#openSignupView" text="UUSI PELAAJA" />
@@ -47,26 +64,41 @@
                   <Insets bottom="10.0" top="10.0" />
                </padding>
             </HBox>
-            <VBox fx:id="showPlayer2" alignment="TOP_RIGHT" layoutX="566.0" maxHeight="80.0" prefHeight="47.0" prefWidth="220.0">
+            <StackPane prefHeight="80.0" prefWidth="240.0" translateX="560.0">
                <children>
-                  <Label text="Pelaaja2:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="player2Name" alignment="TOP_RIGHT" contentDisplay="RIGHT" prefHeight="27.0" prefWidth="151.0" textAlignment="RIGHT">
-                     <font>
-                        <Font name="Bodoni MT" size="22.0" />
-                     </font>
-                  </Label>
-                  <StackPane fx:id="p2Buttons" alignment="TOP_RIGHT" prefHeight="150.0" prefWidth="200.0">
+                  <HBox fx:id="showPlayer2" prefHeight="100.0" prefWidth="240.0" spacing="15.0">
                      <children>
-                        <Button fx:id="loginP2" alignment="CENTER" contentDisplay="CENTER" minHeight="23.0" mnemonicParsing="false" onAction="#openLoginView" prefHeight="23.0" prefWidth="85.0" text="Kirjaudu" textAlignment="CENTER" />
-                        <Button fx:id="logoutP2" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="78.0" layoutY="10.0" minHeight="23.0" mnemonicParsing="false" onAction="#logoutP2" prefHeight="23.0" prefWidth="85.0" text="Kirjaudu ulos" />
+                        <Pane minWidth="80.0" prefHeight="80.0" prefWidth="80.0">
+                           <children>
+                              <ImageView fx:id="player2Avatar" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <VBox alignment="CENTER_LEFT" maxHeight="80.0" maxWidth="150.0" prefHeight="80.0" prefWidth="220.0" spacing="10.0">
+                           <children>
+                              <Label fx:id="player2Name" contentDisplay="RIGHT" prefHeight="27.0" prefWidth="151.0" text="*player2*">
+                                 <font>
+                                    <Font name="Bodoni MT" size="22.0" />
+                                 </font>
+                              </Label>
+                              <Button fx:id="logoutP2" mnemonicParsing="false" onAction="#logoutP1" text="Kirjaudu ulos">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                        </VBox>
                      </children>
-                  </StackPane>
+                  </HBox>
+                  <Button fx:id="loginP2" alignment="CENTER" mnemonicParsing="false" onAction="#openLoginView" text="Kirjaudu">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
                </children>
-            </VBox>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </StackPane>
          </children>
       </AnchorPane>
       <StackPane fx:id="mainArea" alignment="TOP_CENTER" prefHeight="600.0" prefWidth="780.0">
