--- a/Laatikkopeli/src/main/resources/laatikkopeli/game/gameView.fxml
+++ b/Laatikkopeli/src/main/resources/laatikkopeli/game/gameView.fxml
@@ -1,9 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<SplitPane fx:id="gameView" dividerPositions="0.3" prefHeight="600" prefWidth="780" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="laatikkopeli.controllers.GameViewController">
-    <items>
-    </items>
-</SplitPane>
+<StackPane fx:id="gameView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="laatikkopeli.controllers.GameViewController">
+   <children>
+      <VBox fx:id="chooseGameView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="780.0">
+         <children>
+            <AnchorPane prefHeight="50.0" prefWidth="600.0">
+               <children>
+                  <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="303.0" layoutY="10.0" text="Valitse pelialue" textFill="WHITE">
+                     <font>
+                        <Font name="Bodoni MT Bold" size="24.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="closeChooseGame" layoutX="739.0" layoutY="10.0" mnemonicParsing="false" onAction="#closeGameView" style="-fx-background-color: RED;" text="X" textFill="WHITE">
+                     <font>
+                        <Font name="Consolas" size="16.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
+            <ScrollPane hbarPolicy="NEVER" maxHeight="550.0" pannable="true" prefWidth="600.0" style="-fx-background-color: transparent;">
+               <content>
+                  <VBox fx:id="gameAreaList" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: transparent;" />
+               </content></ScrollPane>
+         </children>
+      </VBox>
+      <SplitPane fx:id="gameplay" prefHeight="600.0" prefWidth="780.0" />
+   </children>
+</StackPane>
