--- a/Laatikkopeli/src/main/resources/laatikkopeli/game/gamegrid.fxml
+++ b/Laatikkopeli/src/main/resources/laatikkopeli/game/gamegrid.fxml
@@ -1,47 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="600.0" minWidth="600.0" prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="laatikkopeli.controllers.GamegridController">
-   <children>
-      <GridPane fx:id="gameGrid">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
+<AnchorPane minHeight="600.0" minWidth="600.0" prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: BLACK;" stylesheets="@../../css/Info.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="laatikkopeli.controllers.GamegridController">
+    <children>
+      <StackPane prefHeight="150.0" prefWidth="200.0">
+         <children>
+            <GridPane fx:id="gamegrid">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="40.0" prefWidth="40.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+            <VBox fx:id="gamegridInfo" alignment="CENTER" maxHeight="200.0" maxWidth="400.0" prefHeight="100.0" prefWidth="100.0" spacing="20.0">
+               <children>
+                  <Text fx:id="infoTopic" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                  <Label fx:id="infoDescription" text="Description">
+                     <font>
+                        <Font name="Bodoni MT" size="20.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </children>
+      </StackPane>
    </children>
 </AnchorPane>
