--- a/Laatikkopeli/src/main/resources/laatikkopeli/login.fxml
+++ b/Laatikkopeli/src/main/resources/laatikkopeli/login.fxml
@@ -1,53 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="loginMain" prefHeight="600.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="laatikkopeli.controllers.LoginController">
+<VBox fx:id="signupMain" alignment="TOP_CENTER" prefHeight="600.0" prefWidth="780.0" spacing="15.0" stylesheets="@../css/Info.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="laatikkopeli.controllers.LoginController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="95.0" layoutY="65.0" text="Kirjaudu" textAlignment="JUSTIFY" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="fancy4" text="Kirjaudu">
          <font>
-            <Font name="Copperplate Gothic Bold" size="27.0" />
+            <Font name="Calibri Bold" size="35.0" />
          </font>
-      </Label>
-      <VBox alignment="TOP_CENTER" layoutX="157.0" layoutY="131.0" prefHeight="250.0" prefWidth="100.0" spacing="15.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0">
+         <VBox.margin>
+            <Insets bottom="50.0" />
+         </VBox.margin>
+      </Text>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="fancy4" text="Käyttäjätunnus">
+         <font>
+            <Font name="Calibri Bold" size="25.0" />
+         </font>
+      </Text>
+      <TextField fx:id="username" alignment="TOP_CENTER" maxWidth="300.0" prefHeight="30.0" prefWidth="300.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="fancy4" text="Salasana">
+         <font>
+            <Font name="Calibri Bold" size="25.0" />
+         </font>
+      </Text>
+      <PasswordField fx:id="password" alignment="TOP_CENTER" maxWidth="300.0" prefHeight="30.0" prefWidth="300.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </PasswordField>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
          <children>
-            <Label text="Pelaajanimi">
+            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#loginAsPlayer" text="Sisään">
                <font>
-                  <Font size="18.0" />
-               </font></Label>
-            <TextField fx:id="username" alignment="CENTER" />
-            <Label layoutX="10.0" layoutY="10.0" text="Salasana">
+                  <Font size="22.0" />
+               </font>
+            </Button>
+            <Button fx:id="returnToFrontpage" onAction="#closeLoginView" prefHeight="40.0" prefWidth="40.0" text="X">
                <font>
-                  <Font size="18.0" />
-               </font></Label>
-            <PasswordField fx:id="password" alignment="CENTER" />
-            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0" spacing="20.0">
-               <children>
-                  <Button fx:id="logn" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#loginAsPlayer" text="Sisään">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="closeView" mnemonicParsing="false" onAction="#closeLoginView" text="X">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-               </children>
-            </HBox>
+                  <Font size="22.0" />
+               </font>
+            </Button>
          </children>
-      </VBox>
-      <Label fx:id="infoText" alignment="CENTER" contentDisplay="CENTER" layoutY="400.0" prefWidth="780.0" text="*INFO*" textAlignment="CENTER">
+      </HBox>
+      <Text fx:id="infoText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="fancy3" text="text">
          <font>
-            <Font name="Bodoni MT" size="20.0" />
+            <Font size="25.0" />
          </font>
-      </Label>
+      </Text>
    </children>
-</AnchorPane>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
+</VBox>
