--- a/Laatikkopeli/src/main/resources/laatikkopeli/signup.fxml
+++ b/Laatikkopeli/src/main/resources/laatikkopeli/signup.fxml
@@ -2,36 +2,37 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox fx:id="signupMain" alignment="TOP_CENTER" prefHeight="600.0" prefWidth="780.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="laatikkopeli.controllers.SignupController">
+<VBox fx:id="signupMain" alignment="TOP_CENTER" prefHeight="600.0" prefWidth="780.0" spacing="15.0" stylesheets="@../css/Info.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="laatikkopeli.controllers.SignupController">
     <children>
-        <Label text="Luo uusi pelaaja">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="fancy4" text="Luo uusi pelaaja">
          <font>
-            <Font name="Calisto MT" size="41.0" />
+            <Font name="Calibri Bold" size="35.0" />
          </font>
          <VBox.margin>
             <Insets bottom="50.0" />
-         </VBox.margin></Label>
-      <Label layoutX="166.0" layoutY="30.0" text="Käyttäjätunnus">
+         </VBox.margin>
+      </Text>
+      <Text layoutX="283.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="fancy4" text="Käyttäjätunnus">
          <font>
-            <Font name="Calisto MT" size="26.0" />
+            <Font name="Calibri Bold" size="25.0" />
          </font>
-      </Label>
+      </Text>
       <TextField fx:id="username" alignment="TOP_CENTER" maxWidth="300.0" prefHeight="30.0" prefWidth="300.0">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <Label layoutX="225.0" layoutY="99.0" text="Salasana">
+      <Text layoutX="321.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="fancy4" text="Salasana">
          <font>
-            <Font name="Calisto MT" size="26.0" />
+            <Font name="Calibri Bold" size="25.0" />
          </font>
-      </Label>
+      </Text>
       <PasswordField fx:id="password" alignment="TOP_CENTER" maxWidth="300.0" prefHeight="30.0" prefWidth="300.0">
          <font>
             <Font size="18.0" />
@@ -51,11 +52,11 @@
             </Button>
          </children>
       </HBox>
-      <Label fx:id="infoText" alignment="CENTER" contentDisplay="CENTER" prefWidth="780.0" text="*info*">
+      <Text fx:id="infoText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="fancy3" text="text">
          <font>
-            <Font size="38.0" />
+            <Font size="25.0" />
          </font>
-      </Label>
+      </Text>
     </children>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
