--- a/Laatikkopeli/src/main/resources/fxml/chooseAreaButton.fxml
+++ b/Laatikkopeli/src/main/resources/fxml/chooseAreaButton.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.8" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="780.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19">
+<SplitPane dividerPositions="0.8" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="780.0" xmlns:fx="http://javafx.com/fxml/" xmlns="http://javafx.com/javafx/">
   <items>
       <HBox fx:id="areaInfo" alignment="CENTER" prefHeight="98.0" prefWidth="619.0" spacing="40.0" style="-fx-background-color: LIGHTGREY;">
          <children>
